# ObjectCrawler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-package.yml
objectcrawler/: Crawler.py  Entity.py  SlotsCrawler.py  __init__.py  crawler.py  entity.py  get_assignment.py
src/: SlotsCrawler.py
tests/: test_entity_class.py
