[project]
name = "ObjectCrawler"
authors = [
    {name = "Louis Beal", email = "louis.j.beal@gmail.com"}
]
requires-python = ">=3.7"
description = "simple object crawling debug tool"
# readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
]
version = "0.0.1"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"